--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -21,12 +21,11 @@ h4{
     width:100%;
 }
 .profile-pic{
-    width:30%;
+    width:40%;
     margin:35px auto 10px auto;
     display:block;
 }
 .profile-pic img{
-    max-width:200px;
     border-radius:50%;
     border:1px solid var(--light-gray);
 }
